<resources>

    <string name="app_name">iEtueri</string>
    <string name="title_today">Hoy</string>
    <string name="title_schedule">Horario</string>
    <string name="title_homework">Trabajos</string>
    <string name="title_exam">Examenes</string>
    <string name="title_course">Cursos</string>
    <string name="title_subject">Asignaturas</string>
    <string name="quit_warnings">For quit warnings</string>
    <string name="title_today_new_event">Nuevo Evento</string>
    
    <!--  NEW EVENT TODAY STRINGS -->
    <string name="new_event_today_name">Nombre del evento</string>
    <string name="new_event_today_place">Ubicación</string>
    <string name="new_event_today_since">Desde:</string>
    <string name="new_event_today_until">Hasta:</string>
    <string name="new_event_today_allday">Todo el día</string>
    <string name="new_event_today_description">Descripción</string>
    <string name="new_event_today_repetition">Repetición:</string>
    <string name="new_event_unique_today_event">Evento único</string>
    <!-- NEW EVENT TODAY REPETITION STRINGS -->
    <string name="new_event_repetition_each">Cada</string>
    <string name="new_event_repetition_done">Listo</string>
    <string name="new_event_interval_until"> DD/MM/AAAA</string>
    <string name="weeks">semanas</string>
    <string name="events">eventos</string>
    <string name="new_event_repetition_same_day_each_month">el mismo dia cada mes</string>
    <string name="new_event_repetition_everymonday_each_month">cada primer lunes del mes</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miercoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sabado</string>
    <string name="sunday">Domingo</string>
    <string name="cancel">Cancelar</string>
    <string name="done">Listo</string>
        
    <string-array name="new_event_repetition_types_repetition">
        <item>Evento único</item>
        <item>Repetir diariamente</item>
        <item>Repetir semanalmente</item>
        <item>Repetir mensualmente</item>
        <item>Repetir anualmente</item>
    </string-array>
    
    <string-array name="new_event_repetition_types_interval">
        <item>Siempre</item>
        <item>Hasta una fecha</item>
        <item>Para un numero de eventos</item>
    </string-array>

    <!-- COURSES STRINGS -->
    <string name="title_courses_new_course">Nuevo Curso</string>
    <string name="new_course_name_course">Nombre Curso</string>
    <string name="new_course_init">Inicio</string>
    <string name="new_course_end">Fin</string>
    <string name="title_course_new_course">Nuevo Curso</string>
    <!-- DETAIL COURSES -->
    <string name="title_course_detail_course">Detalles Curso</string>
    <!-- NEW SUBJECT -->
    <string name="title_course_new_subject">Nueva Asignatura</string>
    <string name="note">Nota</string>
    <string name="teacher">Profesor</string>
    <string name="credits">Creditos</string>
    <string name="subject">Asignatura</string>
    <!-- DETAIL SUBJECT -->
    <string name="title_subject_detail_subject">Detalles Asignatura</string>
    <string name="new_homework">Nueva Tarea</string>
    <string name="new_exam">Nuevo Examén</string>
    <!-- NEW EXAM -->
    <string name="new_exam_name">Nombre del Examen</string>
    <string name="new_exam_date">Fecha:</string>
    <string name="new_exam_hour">Hora:</string>
    <string name="new_exam_note">Nota</string>
    <!-- NEW HOMEWORK -->
    <string name="new_homework_name">Nombre de la tarea</string>    
    <string name="new_homework_date">Fecha:</string>
    <string name="new_homework_hour">Hora:</string>
    <string name="new_homework_note">Nota</string>
    <string name="new_homework_description">Descripcion</string>
    <string name="new_homework_priority">Prioridad:</string>
    <!-- PRIORITY -->
    <string name="high_priority">Alta</string>
    <string name="normal_priority">Normal</string>
    <string name="low_priority">Baja</string>
    <!-- DESCRIPTIONS -->
    <string name="courses_description">Pulsa el boton + de la barra del titutlo para crear un nuevo curso.\nDespues de eso, selecciona el curso que desees para crear las asignaturas.\nSi deseas borrar un curso, mantenlo pulsado.</string>
    <string name="subjects_description">Pulsa el boton + de la barra del titutlo para crear una nueva asignatura.\nSeleccionala, y podras añadir tus examenes y tus deberes.\nSi deseas borrar una asignatura, manten pulsado.</string>
    <string name="detail_subjects_description">¡Enhorabuena!\nNo tienes ninguna tarea en esta asignatura.</string>
    <string name="exams_description">No tienes nigun examen pendiente.</string>
    <string name="homework_description">No tienes ningun trabajo pendiente.</string>
    <string name="subject_description">No tienes niguna asignatura creada.\nVe a Cursos, y añade las asignaturas que desees.</string>
</resources>
