<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/dialog_new_homework_priority_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_priority" />

    <Button
        android:id="@+id/dialog_new_homework_priority_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_priority" />

    <Button
        android:id="@+id/dialog_new_homework_priority_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/low_priority" />

</LinearLayout>
