<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >
        
        <EditText
            android:id="@+id/newevent_today_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_event_today_name">
        </EditText>

        <EditText
            android:id="@+id/newevent_today_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_event_today_place"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:text="@string/new_event_today_since"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="-5dp" >

            <Button
                android:id="@+id/newevent_today_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/button_style"
                android:minHeight="28dip"
                android:minWidth="44dip"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="showDatePickerDialog" />

            <Button
                android:id="@+id/newevent_today_from_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/button_style"
                android:minHeight="28dip" 
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="showTimePickerDialog"/>
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:text="@string/new_event_today_until"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="-5dp" >

            <Button
                android:id="@+id/newevent_today_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/button_style"
                android:minHeight="28dip"
                android:minWidth="44dip"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="showDatePickerDialog" />

            <Button
                android:id="@+id/newevent_today_to_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/button_style"
                android:minHeight="28dip" 
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="showTimePickerDialog"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/newevent_today_allday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_event_today_allday" />

        <EditText
            android:id="@+id/newevent_today_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_event_today_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:text="@string/new_event_today_repetition"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/newevent_today_repetition"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_style"
            android:gravity="left|center_vertical"
            android:hint="@string/new_event_unique_today_event"
            android:minHeight="28dip"
            android:minWidth="124dip"
            android:onClick="showRepetitionDialog" />

    </LinearLayout>

</ScrollView>