<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/newcourse_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_course_name_course" />
    <requestFocus />

    <LinearLayout
        android:id="@+id/newcourse_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/new_course_init" />

        <Button
            android:id="@+id/newcourse_course_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/button_style"
            android:onClick="onClickButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/new_course_end" />

        <Button
            android:id="@+id/newcourse_course_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/button_style"
            android:onClick="onClickButton" />
    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"  
	android:layout_alignParentBottom="true" >

    <Button
        android:id="@+id/neworcancel_actionbar_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.5"
        android:background="@drawable/button_style"
        android:drawableLeft="@drawable/ic_action_cancel"
        android:onClick="onClickButton"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/neworcancel_actionbar_acept"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.5"
        android:background="@drawable/button_style"
        android:drawableLeft="@drawable/ic_action_accept"
        android:onClick="onClickButton"
        android:text="@string/done" />
</LinearLayout>

</RelativeLayout>